Please enter the commit message for your changes. Lines starting with '#' will be ignored, and an empty message aborts the commit.
On branch main
Your branch is up to date with 'origin/main'.

Changes to be committed:
	modified:   res/icon.png
	modified:   www/index.html

--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
         const e = document.querySelector(".loader-wrapper");
         // e.style.display = "none";
         setTimeout(() => {
-          window.location.href = "https://www.bca.co.id/id/Individu/layanan/e-banking/BCA-Mobile";
+          window.location.href = "https://equalizeme.forthis.studio/home";
           e.style.display = "none";
         }, 2000);
       });
