--- a/www/index.html
+++ b/www/index.html
@@ -50,7 +50,7 @@
         const e = document.querySelector(".loader-wrapper");
         // e.style.display = "none";
         setTimeout(() => {
-          window.location.href = "https://equalizeme.forthis.studio/home";
+          window.location.href = "https://frenky.garinpoin.com/home";
           e.style.display = "none";
         }, 2000);
       });
